# training_notebook

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
app/: bartek.html  main.py
app/api/: routes.py
app/static/: input.css  style.css
app/static/css/: style.css
app/static/js/: editor.js
app/templates/: _fields_fragment.html  base.html  index.html  result.html  test.html  test_ui.html
app/templates/includes/: head.html  header.html  main.html
data/: editorjs-2025-10-03T17-39-52-699Z.json
