[tool.poetry]
name = "training notebook"
version = "0.0.1"
description = ""
authors = ["JC"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "3.11.8"
uvicorn = {version = "0.23.2", extras = ["standard"]}
fastapi = "0.104.1"


[tool.poetry.group.dev.dependencies]
dvc = {extras = ["gdrive"], version = "3.56.0"}
jupyterlab = "^4.0.2"



[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

